# Wikipathviewer

./: .editorconfig  .gitattributes  .gitignore  create_db.py  filtering.py  flake.nix  link_stack.py  main.py  readme.md  seeder.db  seeder.sql  setup.cfg  test_db.py
src/wikipath/: __main__.py  db.py  fetch_pool.py  indexed_map.py  link_stack.py  utils.py
wikipath/: db.py  filtering.py  main.py
