[metadata]
name = wikipath
version = 0.0.1
author = Sigmanificient
description = Mapping Wikipedia pages together.
platform = unix, linux

[options]
include_package_data = True
packages =
    wikipath
python_requires = >=3.10


package_dir =
    = src
zip_safe = no
install_requires = 
    aiohttp >= 3.8.5
    aiosqlite >= 0.19.0

[options.entry_points]
console_scripts =
    wikipath = wikipath.__main__:main